--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "AngularJS": "angular-latest#^1.5.5"
+    "AngularJS": "angular-latest#^1.5.5",
+    "angular": "^1.5.5"
   }
 }
